[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_safe"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
dynamic = ["version", "description"]
dependencies = [
    "comtypes==1.2.0",
    "forallpeople==2.6.7",
    "pandas==2.1.3"
]

[project.optional-dependencies]

dev = [
    "ipykernel",
    "ipywidgets",
    "pandasgui",
    "line-profiler"
]

test = [
    "pytest==7.4.3"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_safe"

[project.scripts]
app="ak_safe.gui.cli_app:app"